objects/RIT_TechManScope__c.object
<CustomObject>
    <description>Quote Approval – Technical - Manufacturing - Scope for Bid Approval</description>
    <fields>
        <fullName>AnyEquipmentSpecificallyDesigned__c</fullName>
        <description>Quote Approval – Any Equipment Specifically Designed?  for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>Is there any equipment/software specifically designed to fit the Customer&apos;s needs and/or not previously tested?

Customisation, new development, tests to be passed, homologation, certification.</inlineHelpText>
        <label>Any specific custom design (hard/soft) ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BriefDescriptionOfTheEquipment__c</fullName>
        <description>Quote Approval – Brief Description Of The Equipment for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>OG equipment/software/system, IG equipment/software/system, design, site works, installation, supervision, spare parts, services, etc. in our CAPEX contract</inlineHelpText>
        <label>Brief description of the solution</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CommentsOnScopeOfWork__c</fullName>
        <inlineHelpText>Feasibility study, impact on delivery schedule, tests to be passed, homologation, certification, need the support of a external consultant, etc.</inlineHelpText>
        <label>Comments on Scope of Work</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentsOnServiceActivities__c</fullName>
        <description>Quote Approval – Comments On Service Activities for Technical - Manufacturing - Scope.</description>
        <label>Comments On Service Activities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentsOnSiteActivities__c</fullName>
        <description>Quote Approval – Comments On Site Activities for Technical - Manufacturing - Scope.</description>
        <label>Comments On Site Activities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentsOnTechnicalPerformance__c</fullName>
        <inlineHelpText>Comment on technical performance , back-to-back from the OG suppliers on technical performance, etc.</inlineHelpText>
        <label>Comments on Technical Performances</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentsOnTimeSchedule__c</fullName>
        <label>Comments on Time schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DoWeTakeAnyPerformanceCommitment__c</fullName>
        <description>Quote Approval – Do we take any performance commitment with this project?  for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>Is our offer required to comply with technical performance guarantees and/or Service Level Agreement (SLA)?

eg: Solar plant efficiency, Energy savings, Data savings, Transmission rates, % uptime, % savings, energy losses ….</inlineHelpText>
        <label>Technical performance commitment or SLA?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinalUseOfOurSolution__c</fullName>
        <inlineHelpText>What is the final use of our solution for the End-User application?

e.g. BMS for hospital,  Drives for motors, etc.
Life support ( e.g. Hospital) , Nuclear equipment, Data centers, Mine extraction or upstream O&amp;G onshore/offshore are critical segments</inlineHelpText>
        <label>Use of our solution for the End-User?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IfNoPleaseCommentOnDeviation__c</fullName>
        <description>Quote Approval –If No Please Comment On Deviation for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>e.g. No major deviations are done, or the deviations will be acceptable to the Client and will make our offer more competitive, etc.</inlineHelpText>
        <label>Comments on Technical Compliance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IfNoPleaseComment__c</fullName>
        <description>Quote Approval –If No Please Comment on Scope defined, accepted &amp; mastered by SE for Technical - Manufacturing - Scope.</description>
        <label>If No, Please Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IfYesPleaseCommentAndGiveDetailsNew__c</fullName>
        <inlineHelpText>Please comment and give details on the nature of the technical performance guarantees / SLA</inlineHelpText>
        <label>Please describe Perf. Commitment / SLA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IfYesPleaseCommentAndGiveDetails__c</fullName>
        <description>Quote Approval – If yes please comment and give details for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>If Yes, Please Comment And Give Details On The Nature Of The Commitment, The Max. Exposure etc</inlineHelpText>
        <label>If Yes, Please Comment And Give Details</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IfYesPleaseComment__c</fullName>
        <description>Quote Approval –If Yes Please Comment on SE already performed this type of project for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>Examples of projects (name, value, year of completion) and associated lessons learned</inlineHelpText>
        <label>Comments on Know-How and Experience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NewTimeScheduleInMonths__c</fullName>
        <inlineHelpText>From coming into force until completion of the Scope of Work, excl. Warranty period</inlineHelpText>
        <label>SE Time schedule in months_TEXT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PlsExplainHowRisksWillBeMitigated__c</fullName>
        <description>Quote Approval – Please Explain How Risks Will Be Mitigated for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>Has a detailed list of comments, deviations, exclusions and limitations been included in our offer?</inlineHelpText>
        <label>List of deviations included in our offer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProjectReviewedValidatedbySolArch__c</fullName>
        <inlineHelpText>Has the project been reviewed and validated by a Solution Architect?

It is recommended that the Solution Architect put his/her comments as a SME</inlineHelpText>
        <label>Validation by a Solution Architect?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectValBySolArchitect__c</fullName>
        <defaultValue>&apos;It is recommended that the Solution Architect put his/her comments as a SME in the QLK&apos;</defaultValue>
        <label>-</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QualifyManufacturingWorkloadNew__c</fullName>
        <inlineHelpText>Has the workload of the concerned entities (subcontractors, OG, IG) been validated and meets the requirements of our delivery schedule?

Manufacturing , installation, site services, etc.</inlineHelpText>
        <label>Workload of suppliers OK with schedule?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QualifyManufacturingWorkload__c</fullName>
        <description>Quote Approval – Qualify Manufacturing Workload? for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>How Would You Qualify The Manufacturing Workload For The Concerned Entity(ies)?</inlineHelpText>
        <label>Qualify Manufacturing Workload?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Stretch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QualifyTechnicalEnvironmentRisks__c</fullName>
        <description>Quote Approval – Qualify Technical Environment Risks for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>How Would You Qualify The Risks Concerning The Technical Environment And Scope Of Supply?</inlineHelpText>
        <label>Qualify Technical Environment Risks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QualifyTheDeliverySchedule__c</fullName>
        <description>Quote Approval –Qualify The Delivery Schedule  for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>How Would You Qualify The Delivery Schedule?</inlineHelpText>
        <label>Qualify The Delivery Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comfortable</fullName>
                </value>
                <value>
                    <fullName>Tight</fullName>
                </value>
                <value>
                    <fullName>Very Tight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuoteLink__c</fullName>
        <description>Quote Approval - Master-detail relationship between Technical - Manufacturing - Scope of Supply and Quote Link</description>
        <label>Quote Link</label>
        <referenceTo>OPP_QuoteLink__c</referenceTo>
        <relationshipName>RIT_TechManScope</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>SEAlreadyPerformedThisTypeOfProj__c</fullName>
        <description>Quote Approval – SE Already Performed This Type Of Project ?  for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>Does the local Front-Office / Solution Centre have previous experience with this type of project?</inlineHelpText>
        <label>SE prev. performed this type of project?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No - New type of projects</fullName>
                </value>
                <value>
                    <fullName>Limited experience</fullName>
                </value>
                <value>
                    <fullName>Yes but with a smaller scope</fullName>
                </value>
                <value>
                    <fullName>Yes - similar projects</fullName>
                </value>
                <value>
                    <fullName>Yes - bigger projects</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEOwnSufficientSkillsToPerform__c</fullName>
        <description>Quote Approval – SE Own Sufficient Skills To Perform? for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>Does SE Own Sufficient Skills To Perform This Contract?</inlineHelpText>
        <label>SE Own Sufficient Skills To Perform?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SETechnOfferTotallyComplyWithSOW__c</fullName>
        <description>Quote Approval – SE Technical Offer Totally Comply With SOW for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>Does our technical Offer comply totally with the scope of work and meet all the Client&apos;s technical specifications?</inlineHelpText>
        <label>SE Tech. offer fully complies with SOW?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEsTechProdsSolsImposedByClient__c</fullName>
        <description>Quote Approval – SE’s Tech/Prods/Sols Imposed By Client? for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>Does SE have an existing installed base at the Client&apos;s sites?</inlineHelpText>
        <label>SE has existing installed base at site?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No - new Client</fullName>
                </value>
                <value>
                    <fullName>No - new technology is promoted</fullName>
                </value>
                <value>
                    <fullName>No - competitors are promoted</fullName>
                </value>
                <value>
                    <fullName>Yes but limited</fullName>
                </value>
                <value>
                    <fullName>Yes - several sites</fullName>
                </value>
                <value>
                    <fullName>Yes - SE is promoted by the Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScopeDefinedAcceptedMasteredBySE__c</fullName>
        <description>Quote Approval – Scope Defined, Accepted &amp; Mastered By SE for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>Is The Scope Of Work Clearly Defined, Acceptable And Mastered By SE?</inlineHelpText>
        <label>Scope Defined, Accepted &amp; Mastered By SE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScopeOfContractTypeOffer__c</fullName>
        <description>Quote Approval – Formula to display the Scope of the related Opportunity.</description>
        <formula>Text( QuoteLink__r.OpportunityName__r.OpportunityScope__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope Of Contract – Type Offer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScopeofSupplyPartOfEUProcess__c</fullName>
        <inlineHelpText>Will our scope of supply become part of the End-User&apos;s core process?</inlineHelpText>
        <label>Is our scope part of End-User&apos;s process?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceActivities__c</fullName>
        <description>Quote Approval – Service Activities for Technical - Manufacturing - Scope.</description>
        <label>Service Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spare Parts</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>On Site Maintenance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SiteActivities__c</fullName>
        <description>Quote Approval – Site Activities for Technical - Manufacturing - Scope.</description>
        <label>Site Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supervision</fullName>
                </value>
                <value>
                    <fullName>Commissioning</fullName>
                </value>
                <value>
                    <fullName>Civil work</fullName>
                </value>
                <value>
                    <fullName>Turnkey</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TechPerfValBySolArch__c</fullName>
        <defaultValue>&apos;It is recommended that the Solution Architect put his/her comments as a SME in the QLKTechPerfValBySolArch&apos;</defaultValue>
        <label>-</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicalPerfCommOGSuppliers__c</fullName>
        <inlineHelpText>Are our technical performance commitments dependent on the OG suppliers?</inlineHelpText>
        <label>Our performance depends on OG suppliers?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TechnicalPerformanceCommitments__c</fullName>
        <inlineHelpText>Have the technical performance commitments been validated by a Solution Architect?

It is recommended that the Solution Architect put his/her comments as a SME</inlineHelpText>
        <label>Performance validated by Sol. Architect?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeScheduleInMonths__c</fullName>
        <description>Quote Approval – Time Schedule In Months for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>From coming into force until completion of the Scope of Work, excl. Warranty period</inlineHelpText>
        <label>SE Time schedule in months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeScheduleTotallyMasteredBySE__c</fullName>
        <description>Quote Approval – Time Schedule Totally Mastered By SE? for Technical - Manufacturing - Scope.</description>
        <inlineHelpText>Is the time schedule of SE supply totally mastered By SE?

Taking into drawing approval, FAT, installation at site, SAT, PAC, etc.</inlineHelpText>
        <label>Time Schedule totally mastered by SE?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Technical &amp; Scope</label>
    <nameField>
        <displayFormat>RIT-TMS-{0000}</displayFormat>
        <label>Technical - Manufacturing - Scope</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical &amp; Scopes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TMS_VR08_CheckQuoteStatus</fullName>
        <active>true</active>
        <description>Quote Approval - To ensure that information is not edited after Quote Approval</description>
        <errorConditionFormula>NOT($User.BypassVR__c) 
&amp;&amp; 
(Text(QuoteLink__r.QuoteStatus__c) = &apos;Approved&apos;)</errorConditionFormula>
        <errorMessage>RITE Information cannot be modified now, as the Quote is Approved</errorMessage>
    </validationRules>
</CustomObject>